# PANORAFUS.-AI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/panorafus_ai/: __init__.py  cli.py
tests/: test_cli.py
