[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panorafus-ai"
version = "0.1.0"
description = "PANORAFUS.AI / PANORAFUS / PANORA-FUS global panorama fusion network"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "PANORAFUS.AI Contributors" }
]
dependencies = []

[project.scripts]
panorafus-ai = "panorafus_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
